--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 
 body {
       background-color: white;
+      font-family: 'Manrope', sans-serif;
 }
 
 @media (max-width: 375px) {
@@ -11,6 +12,7 @@ body {
     header {
         display: flex;
         justify-content: center;
+        flex-direction: column;
     }
 
     .quizzy-logo {
