--- a/styles/auth.css
+++ b/styles/auth.css
@@ -14,6 +14,7 @@
 
     .auth-header h1{
         margin-top: 10px;
+        font-weight: 200;
     }
 
     .auth-content {
@@ -27,10 +28,10 @@
 
     .user-input-header {
         display: flex;
-        justify-content: center;
+        justify-content:center;
         align-items: center;
         gap: 10px;
-        margin-right: auto;
+        margin: auto;
     }
 
     .user-input-container {
@@ -53,7 +54,7 @@
         border: none;
         color: white;
         border-radius: 12px;
-        text-align: left;
+        text-align: center;
         height: 25px;
         margin-left: auto;
     }
@@ -97,5 +98,10 @@
     .auth-container a{
         text-decoration: none;
         color: black;
+        font-weight: 200;
+    }
+
+    .forget {
+        color: gray;
     }
 }
