--- a/styles/auth.css
+++ b/styles/auth.css
@@ -105,3 +105,114 @@
         color: gray;
     }
 }
+
+.auth-container {
+        
+    margin: auto;
+    border-radius: 12px;
+}
+
+.auth-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-header h1{
+    margin-top: 10px;
+    font-weight: 200;
+}
+
+.auth-content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.user-input-header {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    gap: 10px;
+    margin: auto;
+}
+
+.user-input-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 30px;
+}
+
+.user-input {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.user-input input {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    border-radius: 12px;
+    text-align: left;
+    height: 20px;
+    margin-left: auto;
+    padding: 10px;
+}
+
+.user-input-email-container{
+    gap: 60px;
+}
+
+.user-input input:hover {
+    background-color: black;
+    color: white;
+}
+
+.user-input input:active {
+    background-color: white;
+    color: black;
+}
+
+.auth-container button{
+    margin: auto;
+    margin-top: -10px;
+    border: none;
+    background-color: black;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.auth-container button:hover {
+    background-color: gray;
+    color: black;
+}
+
+.auth-container button:active {
+    background-color: white;
+    color: black;
+}
+
+.login-p {
+    color: gray;
+}
+
+.auth-container a{
+    text-decoration: none;
+    color: black;
+    font-weight: 200;
+}
+
+.forget {
+    color: gray;
+}
