--- a/styles/template.css
+++ b/styles/template.css
@@ -21,10 +21,22 @@ header {
         width: 100px;
     }
 
-    header a{
-        text-decoration: none;
+
+    .user-profile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         color: rgb(78, 78, 78);
         font-weight: 200;
+    }
+
+    .user-profile a{
+        text-decoration: none;
+        color: rgb(78, 78, 78);
+    }
+
+    .user-profile p{
+        color: gray;
     }
 }
 
