--- a/styles/template.css
+++ b/styles/template.css
@@ -4,6 +4,8 @@
 
 body {
     background-color: rgb(218, 218, 218);
+    height: 100%;
+    font-family: 'Manrope', sans-serif;
 }
 
 header {
@@ -14,9 +16,20 @@ header {
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
+    background-color: white;
 }
 
 @media (max-width: 375px) {
+    .wrapper {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    main {
+        flex: 1;
+    }
+
     header img {
         width: 100px;
     }
@@ -37,6 +50,14 @@ header {
 
     .user-profile p{
         color: gray;
+    }
+
+    footer {
+        background-color: #f1f1f1;
+        text-align: center;
+        padding: 10px;
+        box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+        margin-top: 100%;
     }
 }
 
