--- a/styles/home.css
+++ b/styles/home.css
@@ -7,6 +7,13 @@
         font-size: 25px;
     }
 
+    .ready-text{
+        text-align: center;
+        margin-top: 30px;
+        font-family: 'Manrope', sans-serif;
+        font-weight: 400;
+    }
+
     .container-header img{
         width: 100%;
         height: 100%;
