--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -29,11 +29,20 @@
         font-weight: 200;
         padding: 10px;
         cursor: pointer;
+        text-align: center;
     }
 
     .user-item:hover{
         background-color: black;
         color: white;
         border-radius: 12px;
+    }
+
+    .clear-users {
+        margin-top: 30px;
+    }
+
+    .clear-users img{
+        cursor: pointer;
     }
 }
