Styling background color

--- a/styles/template.css
+++ b/styles/template.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: linear-gradient(to right, #89CFF0, #FF4C4C, #8A2BE2);
+    background-color: #cfcfcf;
     font-family: 'Manrope', sans-serif;
     
 }
