--- a/styles/auth.css
+++ b/styles/auth.css
@@ -24,7 +24,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 30px;
-        flex-wrap: wrap
+        flex-wrap: wrap;
     }
 
     .user-input-header {
@@ -35,6 +35,7 @@
         gap: 10px;
         margin: auto;
     }
+
 
     .user-input-container {
         display: flex;
@@ -77,10 +78,15 @@
         border: none;
         background-color: black;
         color: white;
-        width: 100px;
+        width: 200px;
         height: 30px;
         border-radius: 20px;
         cursor: pointer;
+    }
+    
+    .forgetP {
+        width: 200px;
+        background-color: white;
     }
 
     .auth-container button:hover {
@@ -134,6 +140,7 @@
     align-items: center;
     margin-top: 30px;
 }
+
 
 .user-input-header {
     display: flex;
@@ -189,7 +196,7 @@
     border: none;
     background-color: black;
     color: white;
-    width: 100px;
+    width: 150px;
     height: 30px;
     border-radius: 20px;
     cursor: pointer;
