--- a/styles/passwordReset.css
+++ b/styles/passwordReset.css
@@ -2,16 +2,53 @@
     margin: 0;
 }
 
+body {
+    font-family: 'Manrope', sans-serif;
+}
+
 header {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
 header img {
     width: 100px;
+}
 
+header a{
+    text-decoration: none;
+    color: gray;
+}
+
+.container {
+    margin: auto;
+    margin-top: 100px;
+    width: 60%;
+    height: 200px;
+}
+
+.content {
+    font-family: 'Manrope';
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.content h1{
+    font-weight: 200;
+}
+
+.forget-input {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 30px;
+}
+
+.forget-input img{
+    width: 20px;
 }
