--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -46,3 +46,49 @@
         cursor: pointer;
     }
 }
+.container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.container h1{
+    font-weight: 200;
+    color: black;
+}
+
+.user-container {
+    width: 70%;
+    height: 200px;
+    background-color: white;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    border-radius: 12px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.user-item {
+    margin-top: 5px;
+    color: black;
+    font-weight: 200;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.user-item:hover{
+    background-color: black;
+    color: white;
+    border-radius: 12px;
+}
+
+.clear-users {
+    margin-top: 30px;
+}
+
+.clear-users img{
+    cursor: pointer;
+}
