--- a/styles/passwordReset.css
+++ b/styles/passwordReset.css
@@ -44,10 +44,23 @@ header a{
 
 .forget-input {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    gap: 30px;
+    gap: 10px;
     margin-top: 30px;
 }
+
+.forget-input input{
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    border-radius: 12px;
+    text-align: left;
+    height: 20px;
+    padding-left: 10px;
+}
+
+
 
 .forget-input img{
     width: 20px;
