--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -21,6 +21,7 @@ header a:hover {
     text-align: center;
     margin-top: 20px;
     font-family: 'Manrope', sans-serif;
+    font-weight: 200;
 }
 
 .final-score {
@@ -53,6 +54,9 @@ header a:hover {
     width: 80%;
     padding: 20px;
     font-family: 'Manrope', sans-serif;
+    font-weight: 200;
+    font-family: 'Manrope', sans-serif;
+
 }
 
 .question-block p{
@@ -63,6 +67,7 @@ header a:hover {
 .quiz-section h1 {
     font-size: 15px;
     font-family: 'Manrope', sans-serif;
+    font-weight: 200;
 }
 
 button {
