--- a/styles/home.css
+++ b/styles/home.css
@@ -63,6 +63,9 @@ body {
     background-color: black;
     color: white;
     cursor: pointer;
+    transform: scale(1.1);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
 }
 
 .quiz-card h3 {
