--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,20 @@ body {
 
 }
 
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 0.6s forwards;
+  }
+  
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+
 .welcome-msg {
     color: black;
     text-align: center;
