--- a/styles/home.css
+++ b/styles/home.css
@@ -105,6 +105,11 @@ body {
     color: black;
 }
 
+.quiz-card button:active {
+    transform: scale(0.95);
+    background-color: #f0f0f0;
+}
+
 @media (max-width: 375px) {
     .welcome-msg {
         color: black;
